src/index.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500;600;700;800&display=swap');
@import url('react-loading-skeleton/dist/skeleton.css');
@import-normalize;

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --color-primary: 3 3 3; /* #030303 */
    --alpha-primary-light: 0.5;
    --alpha-primary-lighter: 0.3;

    --color-inverted: 255 255 255; /* #ffffff */
    --alpha-inverted-light: 0.5;
    --alpha-inverted-lighter: 0.3;

    --color-gray: 97 97 97; /* #616161 */
    --color-gray-light: 212 212 212; /* #d4d4d4 */
    --color-gray-lighter: 238 238 238; /* #eeeeee */
    --color-gray-dark: 77 77 77; /* #4d4d4d */
    --color-gray-darker: 51 51 51; /* #333333 */

    --color-paper: 255 255 255; /* #ffffff */
    --color-paper-light: 252 252 252; /* #fcfcfc */
    --color-paper-dark: 21 21 21; /* #151515 */
    --alpha-paper-light: 0.2;
    --alpha-paper-dark: 0.2;

    --color-error: 3 3 3; /* #030303 */
  }

  :root[class~='dark'],
  :root:has(.dark) {
    --color-primary: 240 240 240; /* #ffffff */
    --alpha-primary-light: 0.5;
    --alpha-primary-lighter: 0.3;

    --color-inverted: 3 3 3; /* #030303 */
    --alpha-inverted-light: 0.5;
    --alpha-inverted-lighter: 0.3;

    --color-gray: 97 97 97; /* #616161 */
    --color-gray-light: 58 58 58; /* #3a3a3a */
    --color-gray-lighter: 51 51 51; /* #333333 */
    --color-gray-dark: 143 143 143; /* #8f8f8f */
    --color-gray-darker: 238 238 238; /* #eeeeee */

    --color-paper: 21 21 21; /* #151515 */
    --color-paper-light: 0 0 0; /* #000000 */
    --color-paper-dark: 252 252 252; /* #fcfcfc */
    --alpha-paper-light: 0.2;
    --alpha-paper-dark: 0.2;

    --color-error: 255 255 255; /* #ffffff */
  }
}

*,
::before,
::after {
  @apply border-gray-lighter;
}

body {
  @apply font-mono text-base tracking-tight min-w-[1080px];
  @apply text-primary;
  word-spacing: -0.1em;
}

.sb-show-main,
.docs-story {
  @apply text-primary bg-paper;
}

h4 {
  @apply text-lg;
  font-weight: 500;
}

*:focus {
  outline: none;
}

input {
  width: 100%;
  border-sizing: border-box;
}

/* hide input number inner buttons */
input[type='number'] {
  -moz-appearance: textfield; /* Firefox */
}
input[type='number']::-webkit-inner-spin-button,
input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* z-index */
.modal {
  @apply z-40;
}
.popover-panel {
  @apply z-40;
}
.backdrop {
  @apply z-30;
  @apply fixed inset-0 bg-inverted/90;
}
.tooltip {
  @apply z-20;
}
.select ul[role='listbox'],
.dropdown [role='menu'],
.Header {
  @apply z-10;
}

